--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,39 +20,39 @@ services:
     depends_on:
       - postgres
   
-  # zuul-gateway-server:
-  #   container_name: zuul-gateway-server
-  #   image: zuul-gateway-server
-  #   build:
-  #     context: zuul-gateway-server
-  #     dockerfile: ./zuul-gateway-server/Dockerfile
-  #   ports:
-  #     - "8001:8001"
-  #   depends_on:
-  #     - eureka-server
+  zuul-gateway-server:
+    container_name: zuul-gateway-server
+    image: zuul-gateway-server
+    build: https://github.com/elvint14/zuul-gateway-server.git
+#       context: zuul-gateway-server
+#       dockerfile: ./zuul-gateway-server/Dockerfile
+    ports:
+      - "8001:8001"
+    depends_on:
+      - eureka-server
   
-  # auth-service:
-  #   container_name: auth-service
-  #   image: auth-service
-  #   build:
-  #     context: auth-service
-  #     dockerfile: ./auth-service/Dockerfile
-  #   ports:
-  #     - "8085:8085"
-  #   depends_on:
-  #     - eureka-server
-  #     - zuul-gateway-server
-  #     - postgres
+  auth-service:
+    container_name: auth-service
+    image: auth-service
+    build: https://github.com/elvint14/auth-service.git
+#       context: auth-service
+#       dockerfile: ./auth-service/Dockerfile
+    ports:
+      - "8085:8085"
+    depends_on:
+      - eureka-server
+      - zuul-gateway-server
+      - postgres
 
-  # order-service:
-  #   container_name: order-service
-  #   image: order-service
-  #   build:
-  #     context: order-service
-  #     dockerfile: ./order-service/Dockerfile
-  #   ports:
-  #     - "8086:8086"
-  #   depends_on:
-  #     - eureka-server
-  #     - zuul-gateway-server
-  #     - postgres
+  order-service:
+    container_name: order-service
+    image: order-service
+    build: https://github.com/elvint14/order-service.git
+#       context: order-service
+#       dockerfile: ./order-service/Dockerfile
+    ports:
+      - "8086:8086"
+    depends_on:
+      - eureka-server
+      - zuul-gateway-server
+      - postgres
