--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 services:
   postgres:
@@ -10,49 +10,58 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
-  
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   eureka-server:
     container_name: eureka-server
     image: eureka-server
-    build: https://github.com/elvint14/eureka-server.git
+    build:
+      context: eureka-server
+      dockerfile: ./eureka-server/Dockerfile
     ports:
       - "8761:8761"
     depends_on:
       - postgres
-  
+
   zuul-gateway-server:
     container_name: zuul-gateway-server
     image: zuul-gateway-server
-    build: https://github.com/elvint14/zuul-gateway-server.git
-#       context: zuul-gateway-server
-#       dockerfile: ./zuul-gateway-server/Dockerfile
+    build:
+      context: zuul-gateway-server
+      dockerfile: ./zuul-gateway-server/Dockerfile
     ports:
       - "8001:8001"
     depends_on:
+      - postgres
       - eureka-server
-  
+
   auth-service:
     container_name: auth-service
     image: auth-service
-    build: https://github.com/elvint14/auth-service.git
-#       context: auth-service
-#       dockerfile: ./auth-service/Dockerfile
+    build:
+      context: auth-service
+      dockerfile: ./auth-service/Dockerfile
     ports:
       - "8085:8085"
     depends_on:
+      - postgres
       - eureka-server
       - zuul-gateway-server
-      - postgres
 
   order-service:
     container_name: order-service
     image: order-service
-    build: https://github.com/elvint14/order-service.git
-#       context: order-service
-#       dockerfile: ./order-service/Dockerfile
+    build:
+      context: order-service
+      dockerfile: ./order-service/Dockerfile
     ports:
       - "8086:8086"
     depends_on:
+      - postgres
       - eureka-server
       - zuul-gateway-server
-      - postgres
+      - auth-service
